去掉一些警告。